--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,5 @@
+image:
+  file: .gitpod.Dockerfile
 tasks:
-  - name: Setup environment
-    command: nvm i 12
-
   - name: Instaling deps
     init: npm install
