--- a/.eslintrc
+++ b/.eslintrc
@@ -6,8 +6,7 @@
     },
     "extends": [
         "eslint:recommended",
-        "prettier",
-        "plugin:@typescript-eslint/recommended"
+        "prettier"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
