--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "zenfuse",
     "version": "0.1.0-dev",
-    "description": "Elegant crypto exchanges connector",
+    "description": "Neat crypto exchanges connector",
     "main": "src/index.js",
     "scripts": {
         "test": "jest"
@@ -28,6 +28,11 @@
         "eslint-plugin-prettier": "^4.0.0",
         "jest": "^27.3.1",
         "nock": "^13.2.1",
-        "prettier": "^2.4.1"
+        "prettier": "^2.4.1",
+        "typescript": "^4.4.4"
+    },
+    "dependencies": {
+        "got": "^11.8.2",
+        "ws": "^8.2.3"
     }
 }
