--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "author": "zenfuse.io",
     "license": "AGPL-3.0-or-later",
     "engines": {
-        "node": ">=12",
+        "node": ">=14",
         "npm": ">=6"
     },
     "bugs": {
@@ -34,5 +34,11 @@
     "dependencies": {
         "got": "^11.8.2",
         "ws": "^8.2.3"
+    },
+    "jest": {
+        "testMatch": [
+            "**/tests/**/*.js",
+            "**/?(*.)+(spec|test).[jt]s?(x)"
+        ]
     }
 }
