--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
     "env": {
         "commonjs": true,
         "es2021": true,
-        "node": true
+        "node": true,
+        "jest/globals": true
     },
     "extends": ["eslint:recommended", "prettier"],
     "parser": "@typescript-eslint/parser",
@@ -12,5 +13,5 @@
     "plugins": ["prettier", "@typescript-eslint"],
     "rules": {
         "prettier/prettier": "error"
-    }
+    
 }
