--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@typescript-eslint/parser": "^5.3.1",
         "eslint": "^8.2.0",
         "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-jest": "^25.2.4",
         "eslint-plugin-prettier": "^4.0.0",
         "jest": "^27.3.1",
         "jest-json-schema": "^5.0.0",
