--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "Neat crypto exchanges connector",
     "main": "src/index.js",
     "scripts": {
-        "test": "node --trace-warnings node_modules/.bin/jest --no-cache",
+        "test": "npm run unit-tests",
+        "e2e-tests": "MOCK_HTTP=false node --trace-warnings node_modules/.bin/jest --no-cache",
+        "unit-tests": "node --trace-warnings node_modules/.bin/jest --no-cache",
         "format": "eslint --fix .; prettier --write ."
     },
     "repository": {
