Add lint script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "test": "npm run unit-tests",
         "e2e-tests": "MOCK_HTTP=false node --trace-warnings node_modules/.bin/jest --no-cache",
         "unit-tests": "node --trace-warnings node_modules/.bin/jest --no-cache",
-        "format": "eslint --fix .; prettier --write ."
+        "format": "eslint --fix .; prettier --write .",
+        "lint": "eslint ."
     },
     "repository": {
         "type": "git",
