--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "src/index.js",
     "scripts": {
         "test": "npm run test:unit && npm run test:integration",
-        "test:e2e": "TEST_MODE=e2e node --trace-warnings node_modules/.bin/jest --no-cache --runInBand --expand",
-        "test:integration": "TEST_MODE=integration node --trace-warnings node_modules/.bin/jest --expand",
+        "test:e2e": "TEST_MODE=e2e node --unhandled-rejections=strict node_modules/.bin/jest --no-cache --runInBand --expand",
+        "test:integration": "TEST_MODE=integration node --unhandled-rejections=strict node_modules/.bin/jest --expand",
         "test:unit": "TEST_MODE=unit jest --testMatch '**/?(*.)+(spec).js'",
         "format": "eslint --fix .; prettier --write .",
         "lint": "eslint .",
