--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "ws": "^8.2.3"
     },
     "jest": {
+        "slowTestThreshold": 30000,
         "bail": true,
         "testMatch": [
             "**/tests/**/*.test.js"
