--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "typescript": "^4.4.4"
     },
     "dependencies": {
+        "deepmerge": "^4.2.2",
         "got": "^11.8.2",
         "web3-utils": "^1.6.1",
         "ws": "^8.2.3"
