--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-# Create new keys on https://testnet.binance.vision/
-BINANCE_SPOT_TESTNET_PUBLIC_KEY=
-BINANCE_SPOT_TESTNET_SECRET_KEY=
+# Create new keys on https://www.binance.com/en/my/settings/api-management
+BINANCE_PUBLIC_KEY=
+BINANCE_SECRET_KEY=
