--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "url": "https://github.com/zenfuse/zenfuse.js/issues"
     },
     "homepage": "https://zenfuse.js",
+    "types": "./types",
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.3.1",
         "@typescript-eslint/parser": "^5.3.1",
