--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,3 +3,6 @@ image:
 tasks:
     - name: Instaling deps
       init: npm install
+      
+    - name: Login to npm
+      command: if [[ ! -z "${NPM_TOKEN}" ]]; thenprintf "//registry.npmjs.org/:_authToken=${NPM_TOKEN}\n" >> /home/gitpod/.npmrc; fi
