--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,6 @@
 loglevel=error
 fund=false
 update-notifier=false
+
+@zenfuse:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=$GITHUB_TOKEN
