Add npmjs registry configuration

--- a/.npmrc
+++ b/.npmrc
@@ -2,5 +2,5 @@ loglevel=error
 fund=false
 update-notifier=false
 
-@zenfuse:registry=https://npm.pkg.github.com
 //npm.pkg.github.com/:_authToken=$GITHUB_TOKEN
+//registry.npmjs.com/:_authToken=$NPM_TOKEN
