--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "jest": "node --unhandled-rejections=strict node_modules/.bin/jest --no-cache --runInBand",
         "format": "eslint --fix .; prettier --write .",
         "lint": "eslint .",
-        "download-mocks": "bash ./scripts/download_mocks.sh",
+        "download-mocks": "node ./scripts/downloadMocks.js --force",
         "prepare": "npm run download-mocks --silent",
         "build:types": "tsc"
     },
@@ -42,6 +42,7 @@
         "jest-json-schema": "^5.0.0",
         "nock": "^13.2.1",
         "prettier": "^2.4.1",
+        "tasuku": "^1.0.2",
         "typescript": "^4.4.4"
     },
     "dependencies": {
