Add tests for ftx

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 # Create new keys on https://www.binance.com/en/my/settings/api-management
 BINANCE_PUBLIC_KEY=
 BINANCE_SECRET_KEY=
+
+# Create new keys on https://www.binance.com/en/my/settings/api-management
+FTX_PUBLIC_KEY=
+FTX_SECRET_KEY=
