--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "homepage": "https://zenfuse.js",
     "types": "./types",
     "devDependencies": {
+        "@types/ws": "^8.2.2",
         "@typescript-eslint/eslint-plugin": "^5.3.1",
         "@typescript-eslint/parser": "^5.3.1",
         "dotenv": "^10.0.0",
