--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,9 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
-            "name": "E2E Tests",
+            "name": "Full E2E Tests",
             "request": "launch",
             "runtimeArgs": ["run-script", "test:e2e"],
             "runtimeExecutable": "npm",
@@ -16,9 +17,20 @@
             }
         },
         {
-            "name": "Integration Tests",
+            "name": "Full Integration Tests",
             "request": "launch",
             "runtimeArgs": ["run-script", "test:integration"],
+            "runtimeExecutable": "npm",
+            "skipFiles": ["<node_internals>/**/*"],
+            "type": "node",
+            "env": {
+                "DEBUG": "nock:*"
+            }
+        },
+        {
+            "name": "FTX Integration Tests",
+            "request": "launch",
+            "runtimeArgs": ["run-script", "test:integration", "ftx"],
             "runtimeExecutable": "npm",
             "skipFiles": ["<node_internals>/**/*"],
             "type": "node",
