--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,21 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "name": "Full E2E Tests",
             "request": "launch",
             "runtimeArgs": ["run-script", "test:e2e"],
+            "runtimeExecutable": "npm",
+            "skipFiles": ["<node_internals>/**/*"],
+            "type": "node",
+            "env": {
+                "DEBUG": "*"
+            }
+        },
+        {
+            "name": "FTX E2E Tests",
+            "request": "launch",
+            "runtimeArgs": ["run-script", "test:e2e", "ftx"],
             "runtimeExecutable": "npm",
             "skipFiles": ["<node_internals>/**/*"],
             "type": "node",
