--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@
 BINANCE_PUBLIC_KEY=
 BINANCE_SECRET_KEY=
 
-# Create new keys on https://www.binance.com/en/my/settings/api-management
+# Create new keys on https://ftx.com/profile
 FTX_PUBLIC_KEY=
 FTX_SECRET_KEY=
