--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "skipFiles": ["<node_internals>/**/*"],
             "type": "node",
             "env": {
-                "DEBUG": "*"
+                "NODE_DEBUG": "zenfuse*"
             }
         },
         {
@@ -23,7 +23,7 @@
             "skipFiles": ["<node_internals>/**/*"],
             "type": "node",
             "env": {
-                "DEBUG": "*"
+                "NODE_DEBUG": "zenfuse*"
             }
         },
         {
@@ -34,7 +34,7 @@
             "skipFiles": ["<node_internals>/**/*"],
             "type": "node",
             "env": {
-                "DEBUG": "nock:*"
+                "NODE_DEBUG": "zenfuse*"
             }
         },
         {
@@ -45,7 +45,7 @@
             "skipFiles": ["<node_internals>/**/*"],
             "type": "node",
             "env": {
-                "DEBUG": "nock:*"
+                "NODE_DEBUG": "zenfuse*"
             }
         },
         {
@@ -56,7 +56,7 @@
             "skipFiles": ["<node_internals>/**/*"],
             "type": "node",
             "env": {
-                "DEBUG": "*"
+                "NODE_DEBUG": "zenfuse*"
             }
         }
     ]
