--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "zenfuse",
-    "version": "0.5.1-dev.4",
+    "version": "0.6.0",
     "description": "Neat crypto exchanges connector",
     "main": "src/index.js",
     "scripts": {
