--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -4,30 +4,30 @@
 name: Publish Package
 
 on:
-  release:
-    types: [created]
-  workflow_run:
-    workflows: ["CI"]
-    branches: [main]
-    types: 
-      - completed
+    release:
+        types: [created]
+    workflow_run:
+        workflows: ['CI']
+        branches: [main]
+        types:
+            - completed
 
 jobs:
-  ci:
-    uses: zenfuse/zenfuse.js/.github/workflows/node.js.yml@main
-  
-  publish-gpr:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 16
-          registry-url: https://npm.pkg.github.com/
-      - run: npm ci
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+    ci:
+        uses: zenfuse/zenfuse.js/.github/workflows/node.js.yml@main
+
+    publish-gpr:
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            packages: write
+        steps:
+            - uses: actions/checkout@v2
+            - uses: actions/setup-node@v2
+              with:
+                  node-version: 16
+                  registry-url: https://npm.pkg.github.com/
+            - run: npm ci
+            - run: npm publish
+              env:
+                  NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
