--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -24,6 +24,6 @@ jobs:
                   node-version: 16
                   registry-url: https://npm.pkg.github.com/
                   always-auth: true
-            - run: npm publish
+            - run: npm publish --ignore-scripts --access public
               env:
                   NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
