--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,11 @@
+
 image:
     file: .gitpod.Dockerfile
 tasks:
     - name: Preparing for dev
       init: npm install
       command: npm run download-mocks
+
+vscode:
+  extensions:
+    - huntertran.auto-markdown-toc
