--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,3 @@
 {
-    "recommendations": [
-        "huntertran.auto-markdown-toc"
-    ]
+    "recommendations": ["huntertran.auto-markdown-toc"]
 }
