--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "eslint": "^8.2.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-jest": "^25.7.0",
+        "eslint-plugin-jsdoc": "^37.6.3",
         "eslint-plugin-prettier": "^4.0.0",
         "jest": "^27.3.1",
         "nock": "^13.2.1",
