--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "zenfuse",
     "version": "0.6.1-dev.5",
-    "description": "NodeJS Exchange connector for Binance and FTX",
+    "description": "Crypto exchanges connector library",
     "main": "src/index.js",
     "scripts": {
         "test": "npm run test:unit --silent && npm run test:integration --silent",
