auth and formats fixes

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ BINANCE_SECRET_KEY=
 # Create new keys on https://ftx.com/profile
 FTX_PUBLIC_KEY=
 FTX_SECRET_KEY=
+
+# Create new keys on https://www.bitglobal.com/en-us/account/user/api-key/list
+BITHUMB_PUBLIC_KEY=
+BITHUMB_SECRET_KEY=
