--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,9 @@
         "prettier/prettier": "error",
         "jsdoc/require-property-description": "off",
         "jsdoc/require-param-description": "off",
-        "jsdoc/require-returns-description": "off"
+        "jsdoc/require-returns-description": "off",
+        "no-console": "error",
+        "jest/no-disabled-tests": "error"
     },
     "globals": {
         "Proxy": true,
