Copy and rename ftx classes for huobi

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ BITGLOBAL_SECRET_KEY=
 OKX_PUBLIC_KEY=
 OKX_SECRET_KEY=
 OKX_PASSPHRASE=
+# Create new keys on https://www.huobi.com/en-us/apikey/
+HUOBI_PUBLIC_KEY=
+HUOBI_SECRET_KEY=
