--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "zenfuse",
-    "version": "0.10.20",
-    "description": "Comprehensive crypto trading library",
-    "main": "src/index.cjs",
+    "version": "0.7.0-dev.0",
+    "description": "Crypto exchanges connector library",
+    "main": "src/index.js",
     "scripts": {
         "test": "just test unit && just test integration",
         "test:e2e": "just test e2e",
@@ -44,30 +44,16 @@
     "homepage": "https://zenfuse.js.org",
     "types": "./types",
     "devDependencies": {
-        "@cspell/dict-companies": "^3.0.1",
-        "@cspell/dict-cryptocurrencies": "^3.0.0",
-        "@cspell/dict-docker": "^1.1.1",
-        "@cspell/dict-en_us": "^4.0.0",
-        "@cspell/dict-filetypes": "^3.0.0",
-        "@cspell/dict-fullstack": "^3.0.0",
-        "@cspell/dict-html": "^4.0.0",
-        "@cspell/dict-node": "^4.0.1",
-        "@cspell/dict-npm": "^5.0.0",
-        "@cspell/dict-software-terms": "^3.0.1",
-        "@cspell/dict-typescript": "^3.0.1",
-        "@cspell/eslint-plugin": "^6.0.0",
         "@types/ws": "^8.5.2",
         "@typescript-eslint/eslint-plugin": "^5.14.0",
         "@typescript-eslint/parser": "^5.14.0",
         "dotenv": "^16.0.0",
         "eslint": "^8.10.0",
         "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-file-progress": "^1.3.0",
-        "eslint-plugin-jest": "^27.0.1",
-        "eslint-plugin-jsdoc": "^39.2.8",
+        "eslint-plugin-jest": "^26.1.1",
+        "eslint-plugin-jsdoc": "^38.0.0",
         "eslint-plugin-prettier": "^4.0.0",
-        "jest": "^29.0.1",
-        "just-install": "^1.0.8",
+        "jest": "^27.5.1",
         "mri": "^1.2.0",
         "nock": "^13.2.4",
         "prettier": "^2.4.1",
