--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Binance E2E Tests",
             "request": "launch",
@@ -30,6 +31,17 @@
             "name": "FTX E2E Tests",
             "request": "launch",
             "runtimeArgs": ["run-script", "test:e2e", "ftx"],
+            "runtimeExecutable": "npm",
+            "skipFiles": ["<node_internals>/**/*"],
+            "type": "node",
+            "env": {
+                "NODE_DEBUG": "zenfuse*"
+            }
+        },
+        {
+            "name": "OKX E2E Tests",
+            "request": "launch",
+            "runtimeArgs": ["run-script", "test:e2e", "okx"],
             "runtimeExecutable": "npm",
             "skipFiles": ["<node_internals>/**/*"],
             "type": "node",
@@ -74,6 +86,17 @@
             "name": "FTX Integration Tests",
             "request": "launch",
             "runtimeArgs": ["run-script", "test:integration", "ftx"],
+            "runtimeExecutable": "npm",
+            "skipFiles": ["<node_internals>/**/*"],
+            "type": "node",
+            "env": {
+                "NODE_DEBUG": "zenfuse*"
+            }
+        },
+        {
+            "name": "FTX Integration Tests",
+            "request": "launch",
+            "runtimeArgs": ["run-script", "test:integration", "okx"],
             "runtimeExecutable": "npm",
             "skipFiles": ["<node_internals>/**/*"],
             "type": "node",
