--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "test:e2e": "TEST_MODE=e2e npm run jest --silent",
         "test:integration": "TEST_MODE=integration npm run jest --silent",
         "test:unit": "TEST_MODE=unit jest --testMatch '**/?(*.)+(spec).js'",
-        "jest": "node --unhandled-rejections=strict node_modules/.bin/jest --no-cache --runInBand --detectOpenHandles",
+        "jest": "node --unhandled-rejections=strict node_modules/.bin/jest --no-cache --runInBand",
         "format": "eslint --fix .; prettier --write .",
         "lint": "eslint .",
         "download-mocks": "node ./scripts/downloadMocks.js",
@@ -26,7 +26,7 @@
     "author": "zenfuse.io",
     "license": "AGPL-3.0-or-later",
     "engines": {
-        "node": ">=12",
+        "node": ">=14",
         "npm": ">=6"
     },
     "bugs": {
