--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,11 @@ jobs:
                   node-version: ${{ matrix.node-version }}
                   cache: 'npm'
 
+            - name: Cache mocks
+              uses: actions/cache@v3.0.2
+              with:
+                path: tests/exchanges/*/mocks/static/*
+
             - run: npm ci
             - run: npm run download-mocks
             - run: npm test
