--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,9 +36,10 @@ jobs:
               id: cache-mocks
               uses: actions/cache@v3.0.2
               with:
-                path: ./tests/exchanges/*/mocks/static/*
-                key: heavy-mocks
-                restore-keys: heavy-mocks
+                path: ~/tests/exchanges/*/mocks/static/*
+                key: ${{ runner.os }}-mocks
+                restore-keys: | 
+                    ${{ runner.os }}-mocks
                 
             - run: npm ci
             
