--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,13 +27,13 @@ jobs:
                   cache: 'npm'
             - run: npm ci --only=dev
             
+            - run: npm run download-mocks
+            
             - name: Cache Mocks
               uses: actions/cache@v3.0.2
               with:
                 path: tests/exchanges/*/mocks/static/*
                 key: heavy-mocks
-            
-            - run: npm run download-mocks
 
     test:
         needs: [lint, mocks]
@@ -52,7 +52,7 @@ jobs:
             - name: Restore mocks
               uses: actions/cache@v3.0.2
               with:
-                path: ~/tests/exchanges/*/mocks/static/*
+                path: tests/exchanges/*/mocks/static/*
                 key: heavy-mocks
                 restore-keys: heavy-mocks
                 
