--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,13 +27,13 @@ jobs:
                   cache: 'npm'
             - run: npm ci --only=dev
             
-            - run: npm run download-mocks
-            
             - name: Cache Mocks
               uses: actions/cache@v3.0.2
               with:
                 path: tests/exchanges/*/mocks/static/*
-                key: heavy-mocks
+                key: heavy-mocks-${{ hashFiles('tests/exchanges/*/mocks/static/*') }}
+
+            - run: npm run download-mocks -- --force
 
     test:
         needs: [lint, mocks]
@@ -53,8 +53,9 @@ jobs:
               uses: actions/cache@v3.0.2
               with:
                 path: tests/exchanges/*/mocks/static/*
-                key: heavy-mocks
-                restore-keys: heavy-mocks
+                key: heavy-mocks-${{ hashFiles('tests/exchanges/*/mocks/static/*') }}
+                restore-keys: |
+                    heavy-mocks-
                 
             - run: npm ci
             - run: npm test
