--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "zenfuse",
-    "version": "0.8.1-dev.4",
+    "version": "0.9.0",
     "description": "Crypto exchanges connector library",
     "main": "src/index.js",
     "scripts": {
